feat: agregar pasos para ejecutar tests y generar reportes en help, ajustes de código para Jacoco y pruebas unitarias
- Se documentaron los comandos necesarios para ejecutar tests y visualizar el reporte de Jacoco en el apartado Getting Started.
- Se realizaron ajustes menores al código para la correcta generación del reporte de cobertura de pruebas.
- Se mejoró la estructura de las pruebas unitarias y su integración con el pipeline de build.