@@ -1,15 +1,16 @@
 package com.celotts.productservice.applications.usecase;
 
-import com.celotts.productservice.domain.model.ProductBrandModel;
 import com.celotts.productservice.domain.model.ProductModel;
 import com.celotts.productservice.domain.port.category.output.CategoryRepositoryPort;
 import com.celotts.productservice.domain.port.product.brand.output.ProductBrandRepositoryPort;
+import com.celotts.productservice.domain.port.product.root.input.ProductUseCase;
 import com.celotts.productservice.domain.port.product.root.output.ProductRepositoryPort;
 import com.celotts.productservice.domain.port.product.unit.output.ProductUnitRepositoryPort;
-import com.celotts.productservice.domain.port.product.root.input.ProductUseCase;
-import com.celotts.productservice.infrastructure.adapter.input.rest.exception.BrandNotFoundException;
+import com.celotts.productservice.infrastructure.adapter.input.rest.dto.product.ProductRequestDTO;
 import com.celotts.productservice.infrastructure.adapter.input.rest.exception.ProductAlreadyExistsException;
 import com.celotts.productservice.infrastructure.adapter.input.rest.exception.ProductNotFoundException;
+import com.celotts.productservice.infrastructure.adapter.input.rest.mapper.product.ProductDtoMapper;
+import com.celotts.productservice.infrastructure.adapter.input.rest.mapper.product.ProductRequestMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -18,7 +19,9 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,65 +32,52 @@ public class ProductUseCaseImpl implements ProductUseCase {
     private final ProductUnitRepositoryPort productUnitPort;
     private final ProductBrandRepositoryPort productBrandPort;
     private final CategoryRepositoryPort categoryPort;
+    private final ProductRequestMapper productRequestMapper;
 
     @Autowired
     public ProductUseCaseImpl(
             ProductRepositoryPort repository,
             ProductUnitRepositoryPort productUnitPort,
             @Qualifier("productBrandAdapter") ProductBrandRepositoryPort productBrandPort,
-            @Qualifier("categoryAdapter") CategoryRepositoryPort categoryPort
+            @Qualifier("categoryAdapter") CategoryRepositoryPort categoryPort,
+            ProductRequestMapper productRequestMapper
     ) {
         this.repository = repository;
         this.productUnitPort = productUnitPort;
         this.productBrandPort = productBrandPort;
         this.categoryPort = categoryPort;
+        this.productRequestMapper = productRequestMapper;
     }
 
     @Override
-    public ProductModel createProduct(ProductModel model) {
-        if (repository.findByCode(model.getCode()).isPresent()) {
-            throw new ProductAlreadyExistsException("Product code already exists: " + model.getCode());
+    public ProductModel createProduct(ProductRequestDTO dto) {
+        if (repository.findByCode(dto.getCode()).isPresent()) {
+            throw new ProductAlreadyExistsException("Product code already exists: " + dto.getCode());
         }
-        validateReferences(model);
+        validateReferences(dto);
+        ProductModel model = productRequestMapper.toModel(dto);
         model.setCreatedAt(LocalDateTime.now());
         return repository.save(model);
     }
 
     @Override
-    public ProductModel updateProduct(UUID id, ProductModel model) {
-        validateReferences(model);
-        return repository.save(model.withId(id));
+    public ProductModel updateProduct(UUID id, ProductRequestDTO dto) {
+        ProductModel existing = getProductById(id);
+        validateReferences(dto);
+        ProductRequestMapper.updateModelFromDto(existing, ProductDtoMapper.toUpdateDto(dto));
+        return repository.save(existing);
     }
 
     @Override
     public ProductModel getProductById(UUID id) {
-        return repository.findById(id).orElseThrow(() -> new ProductNotFoundException(id));
+        return repository.findById(id)
+                .orElseThrow(() -> new ProductNotFoundException(id));
     }
 
     @Override
     public ProductModel getProductByCode(String code) {
-        return repository.findByCode(code).orElseThrow(() ->
-                new ProductNotFoundException("Product not found with code: " + code));
-    }
-
-    @Override
-    public List<ProductModel> getAllProducts() {
-        return repository.findAll();
-    }
-
-    @Override
-    public Page<ProductModel> getAllProducts(Pageable pageable) {
-        return repository.findAll(pageable);
-    }
-
-    @Override
-    public Page<ProductModel> getAllProductsWithFilters(Pageable pageable, String code, String name, String description) {
-        return repository.findAllWithFilters(pageable, code, name, description);
-    }
-
-    @Override
-    public void deleteProduct(UUID id) {
-        repository.findById(id).orElseThrow(() -> new ProductNotFoundException(id));
+        return repository.findByCode(code)
+                .orElseThrow(() -> new ProductNotFoundException("Product not found with code: " + code));
     }
 
     @Override
@@ -102,9 +92,9 @@ public class ProductUseCaseImpl implements ProductUseCase {
     }
 
     @Override
-    public ProductModel disableProduct(UUID id) {
+    public void disableProduct(UUID id) {
         ProductModel product = getProductById(id);
-        return repository.save(product.withEnabled(false));
+        repository.save(product.withEnabled(false));
     }
 
     @Override
@@ -114,8 +104,13 @@ public class ProductUseCaseImpl implements ProductUseCase {
     }
 
     @Override
-    public boolean existsById(UUID id) {
-        return repository.existsById(id);
+    public Page<ProductModel> getAllProducts(Pageable pageable) {
+        return repository.findAll(pageable);
+    }
+
+    @Override
+    public Page<ProductModel> getAllProductsWithFilters(Pageable pageable, String code, String name, String description) {
+        return repository.findAllWithFilters(pageable, code, name, description);
     }
 
     @Override
@@ -135,13 +130,16 @@ public class ProductUseCaseImpl implements ProductUseCase {
 
     @Override
     public List<ProductModel> getLowStockByCategory(UUID categoryId) {
-        return repository.findByCategoryId(categoryId)
-                .stream().filter(ProductModel::lowStock).collect(Collectors.toList());
+        return repository.findByCategoryId(categoryId).stream()
+                .filter(ProductModel::lowStock)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<ProductModel> getLowStockProducts() {
-        return repository.findAll().stream().filter(ProductModel::lowStock).toList();
+        return repository.findAll().stream()
+                .filter(ProductModel::lowStock)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -161,41 +159,21 @@ public class ProductUseCaseImpl implements ProductUseCase {
 
     @Override
     public Optional<String> validateUnitCode(String code) {
+        if (!productUnitPort.existsByCode(code)) {
+            return Optional.empty();
+        }
         return productUnitPort.findNameByCode(code);
     }
 
-    private void validateReferences(ProductModel model) {
-        if (!productUnitPort.existsByCode(model.getUnitCode())) {
-            throw new ProductNotFoundException("Invalid unit code: " + model.getUnitCode());
+    private void validateReferences(ProductRequestDTO dto) {
+        if (!productUnitPort.existsByCode(dto.getUnitCode())) {
+            throw new ProductNotFoundException("Invalid unit code: " + dto.getUnitCode());
         }
-        if (!productBrandPort.existsById(model.getBrandId())) {
-            throw new ProductNotFoundException("Invalid brand ID: " + model.getBrandId());
+        if (!productBrandPort.existsById(dto.getBrandId())) {
+            throw new ProductNotFoundException("Invalid brand ID: " + dto.getBrandId());
         }
-        if (!categoryPort.existsById(model.getCategoryId())) {
-            throw new ProductNotFoundException("Invalid category ID: " + model.getCategoryId());
+        if (!categoryPort.existsById(dto.getCategoryId())) {
+            throw new ProductNotFoundException("Invalid category ID: " + dto.getCategoryId());
         }
-    }
-
-    @Override
-    public ProductBrandModel enableBrand(UUID id) {
-        ProductBrandModel brand = productBrandPort.findById(id)
-                .orElseThrow(() -> new BrandNotFoundException(id));
-        brand.activate();
-        brand.setUpdatedAt(LocalDateTime.now());
-        return productBrandPort.save(brand);
-    }
-
-    @Override
-    public ProductBrandModel disableBrand(UUID id) {
-        ProductBrandModel brand = productBrandPort.findById(id)
-                .orElseThrow(() -> new BrandNotFoundException(id));
-        brand.deactivate();
-        brand.setUpdatedAt(LocalDateTime.now());
-        return productBrandPort.save(brand);
-    }
-
-    @Override
-    public List<String> findAllUnitCodes() {
-        return productUnitPort.findAllCodes();
     }
 }
